--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mind-mapper-ai",
   "version": "1.0.0",
   "description": "Dependencies for the Mind-Mapper AI Netlify site.",
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0"
   }
